  * Improve handling of invalid or unknown frame sizes.
  * Fixed handling of streamed Flash videos (broken in 1.1.5).
  * Fixed division by zero in sputext decoder
  * Build fix for when using Linux 2.6.23 headers. [Bug 1820958]
  * Implemented decoding of XML character entities with codes >= 256.
    This requires conversion to UTF-8 of entities with codes >= 128.
  * Fixed ATSC support. [Bug 1749508]
  * Fixed a possible DVB plugin crash when switching channels.
  * Fixed a crash closing the frontend. [Bug FS#3]
  * Fixed deadlock on ao_close while paused.
  * Nicer wakeup behaviour, using select instead of nanosleep (800 -> 100
    wakeups/s).
  * Fixed ALSA close function to not discard all data that had been written
    but not played yet.
  * Fixed a race condition between ao_loop and ao_close to not lose the last
    buffer.
  * DXR3 encoding with external ffmpeg should be fixed now.
    (This was broken by ffmpeg revision 9283).
  * Enabled the WMV VC1 (ffmpeg) codec.
  * Fixed a crash that happened when a video output was closed

xine-lib (1.1.8)
  * Send a channel-changed event to the frontend when receiving the SYNC
    string from last.fm streaming server.
  * Disable mediaLib support by default (the licenses probably disallow the
    distribution of xine binaries built against mediaLib, and on non-VIS
    capable boxes it's probably worse than our own code).
  * Rename endianness-reading macros so that they don't collide with Solaris
    system macros. BE_/LE_ are now _X_BE_ and _X_LE_.
  * Add an extra function to allow front ends to rename their old,
    badly-named configuration items.
  * Various build fixes and cleanups for Solaris, plugin dependencies etc.
  * Fix some memory leaks in the Vorbis decoder and video overlays.
  * Fix a problem with the goom plugin which could cause it to stop working.
  * Clean up "%" unescaping in MRLs; correctly handle "%" in DVD and VCD MRLs.
  * Fix a crash with "dvb:/".